--- a/style.css
+++ b/style.css
@@ -1,8 +1,94 @@
+:root {
+    --clr-green: #1ed760;
+    --clr-white: white;
+}
+
+@font-face {
+    font-family: "Gotham Medium";
+    src: url("font/Gotham\ Medium\ Regular.ttf") format("truetype");
+}
+
+* {
+    font-family: "Gotham Medium";
+    box-sizing: border-box;
+}
+
+body {
+    background: linear-gradient(0deg, #00000088 30%, #ffffff44 100%), url("images/pexels-vlado-paunovic-10457996.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0;
+}
+
+.container {
+    width: 100%;
+    margin: 3.125rem auto 1em auto;
+}
+
+@media (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
 header {
     text-align: center;
+    color: var(--clr-white);
+}
+
+form {
+    padding: 2.5em;
+    padding-bottom: 1.5em;
+    border-radius: 15px;
+    background-color: rgba(25, 20, 20, 0.7);
+}
+
+form h2 {
+    color: var(--clr-white);
+}
+
+label {
+    color: var(--clr-white);
 }
 
 .form-group {
     display: flex;
     flex-direction: column;
+}
+
+#dropdown {
+    height: 2em;
+    box-sizing: border-box;
+    color: black;
+}
+
+.text-input {
+    height: 2em;
+    border-radius: 5px;
+    box-sizing: border-box;
+    border: none;
+}
+
+textarea {
+    height: 200px;
+    border-radius: 5px;
+    color: black;
+    border: none;
+}
+
+#submit {
+    background-color: var(--clr-green);
+    padding: 10px 0;
+    font-size: 1.5em;
+    border-radius: 10px;
+    border: none;
+    color: var(--clr-white);
+    margin-top: 10px;
 }
