--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body {
     .container {
         max-width: 720px;
     }
+
+    form {
+        border-radius: 15px;
+    }
 }
 
 header {
@@ -44,43 +48,43 @@ header {
     color: var(--clr-white);
 }
 
+#description {
+    font-style: italic;
+}
+
 form {
     padding: 2.5em;
     padding-bottom: 1.5em;
-    border-radius: 15px;
     background-color: var(--clr-black);
-}
-
-form h2 {
     color: var(--clr-white);
-}
-
-label {
-    color: var(--clr-white);
+    font-size: 1.25em;
 }
 
 .form-group {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    margin-bottom: 1em;
 }
 
-#dropdown {
-    height: 2em;
-    box-sizing: border-box;
-    color: black;
+.form-group p {
+    margin-bottom: 10px;
 }
 
 .text-input {
+    box-sizing: border-box;
     height: 2em;
     border-radius: 5px;
-    box-sizing: border-box;
-    border: none;
+    padding-left: 10px;
 }
 
 textarea {
     height: 200px;
     border-radius: 5px;
-    color: black;
+}
+
+.text-input, textarea {
+    font-size: inherit;
     border: none;
 }
 
